[package]
name = "ringcrypt"
version = "0.1.2"
edition = "2021"

[dependencies]
rayon = "1.10.0"
rpassword = "7.3.1"
walkdir = "2.5.0"
mimalloc = { version = "0.1.43", features = ["secure"]}
# ring = "0.17.8" awslcrs在windows编译时候闹事就直接换成ring本体。
ring = { package = "aws-lc-rs", version = "1.8.1", features = ["bindgen"] }
argon2 = "0.5.3"
